refactor(auth): 重构认证客户端配置与网关中心代码结构
- 修改mvn-deploy.sh脚本，将跳过测试参数从-DskipTests改为-Dmaven.test.skip=true
- 重构AuthClientAutoConfiguration类，优化RestClient配置方式，移除ConditionalOnProperty条件判断
- 完善AuthClientAutoConfiguration类文档注释，明确两类HTTP客户端职责分工
- 修改AuthClientTokenService类，简化登录URL构建方式，移除不必要的URI创建
- 重构CommonAppAutoConfiguration中的LoadBalancerCacheManager，使用NoOpCache替代null返回
- 移除uw-httpclient模块中的SSL测试相关文件
- 调整uw-oauth2-client模块依赖，统一使用spring-boot-starter-test替代独立测试依赖
- 更新项目版本号至2026.0501.0003及各子模块版本
- 重构MscAclHelper类，使用RestClient替代RestTemplate进行HTTP调用
- 统一项目内ResponseData导入路径，使用uw.common.response.ResponseData
- 替换网关中心ACME模块中的DAO方法调用，使用新方法名保持一致性
- 更新访问日志控制器中的分页数据类型，使用PageList替代DataList和ESDataList